--- a/arch/arm/configs/express_defconfig
+++ b/arch/arm/configs/express_defconfig
@@ -550,6 +550,7 @@ CONFIG_CPU_FREQ_GOV_SMARTASS=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SMOOTHASS=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 # CONFIG_CPU_IDLE is not set
 CONFIG_CPU_FREQ_MSM=y
 
